# id2202-compilers

./: README.md
_build/: _log
module 1 examples/: README-calc.md
module 1 examples/calc1/: Makefile  calc.ml  lexer.mll  parser.mly
module 1 examples/calc2/: .#parser.mly  Makefile  lexer.mll  parser.mly
module 1 examples/calc2/_build/: _digests  _log  calc.ml
peer/module1/calc/: Makefile  calc  calc.ml
peer/module1/cigrid/: .gitignore  Makefile  README.md  cigrid  conflicts.conflicts  ex.cpp  example.cpp  example1.cpp  lexer.mll  main.ml  mine.txt  original.txt  parser.conflicts  should_be.txt
peer/module2/asm/: Makefile  main-asm.asm
peer/module2/cigrid/: cigrid.cabal  cigrid.y
peer/module2/cigrid/examples/: examples.cpp
peer/module2/cigrid/src/: Asm.hs  Ir.hs  Lexer.x  Main.hs  Parser.y  Scanner.hs  Semantics.hs
solutions/cigrid/: Makefile  a.asm  a.out  ast_types.ml  cigrid  cigrid.ml  lexer.mll  parser.mly  pprint_ast.ml  right.txt  run.sh  theory.md  token.ml  wrong.txt
solutions/cigrid/_build/: _digests  _log  ast_types.cmi  ast_types.cmo  ast_types.cmx  ast_types.ml  cigrid.cmi  cigrid.cmo  cigrid.cmx  cigrid.ml  cigrid.ml.depends  cigrid.native  lexer.cmi  lexer.cmo  lexer.cmx  lexer.ml  lexer.ml.depends  lexer.mll  parser.cmi  parser.cmx  parser.conflicts  parser.ml  (+12 more)
solutions/cigrid_ocamlb/: ast_types.ml  cigrid  cigrid-gcc  prog.txt  wrong.txt
solutions/module0/: primes
template-projects/: Vagrantfile  Vagrantfile-OCaml  Vagrantfile-OCaml.win  Vagrantfile.win
template-projects/java/: hello
template-projects/rust/: Makefile
(+126 files in other folders)
