name: cigrid
version: 0.1.0.0
author: Rasmus Danielsson
build-type: Simple
cabal-version: >=1.24

executable cigrid
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -funbox-strict-fields
  other-modules: Lexer, Parser, Semantics, Asm, Ir
  build-tools: alex, happy
  build-depends: base
               , containers
               , cmdargs
               , unordered-containers
               , filepath
               , text
               , pretty-show
               , prettyprinter
               , process
               , semigroups 
               , optparse-applicative
               , uniplate
               , protolude
               , recursion-schemes
               , transformers
               , template-haskell
               , array
               , directory

